--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section>
   <div class="container">
     <div class="profile">
-      <img class="rounded-circle icaaa" src="assets/image/dzakwan.jpg" 
+      <img class="rounded-circle icaaa" src="dzakwan.jpeg" 
       alt="error404 :("/>
       <h2>Muhammad Dzakwan Nur Aqli</h2>
       <h4 class="text-center gelar">Web Developer & Designer</h4>
